--- a/views/main_activities/index.html.ejs
+++ b/views/main_activities/index.html.ejs
@@ -28,7 +28,7 @@
               <tbody>
                 <% for (let i = 0; i < offers.length; i++) { %>
                 <tr>
-                  <td><a href="/activities/offers/<%= offers[i].id %>"><%= offers[i].firstname%> <%=offers[i].lastname %></a> </td>
+                  <td><a href="/activities/<%= offers[i].id %>"><%= offers[i].firstname%> <%=offers[i].lastname %></a> </td>
                   <td><%= offers[i].age %></td>
                   <td><%= offers[i].city %></td>
                   <td><%= offers[i].sport %></td>
