--- a/views/offers/show.html.ejs
+++ b/views/offers/show.html.ejs
@@ -18,8 +18,8 @@
 
 
     <div class="action-btns">
-      <button type="button" name="button" class="edit-btn"><a href="/activities/<%=offer.rows[0].id%>/edit">EDIT</a></button>
-      <form action="/activities/<%=offer.rows[0].id%>?_method=DELETE" method="POST" class="delete-btn">
+      <button type="button" name="button" class="edit-btn"><a href="/offers/<%=offer.rows[0].id%>/edit">EDIT</a></button>
+      <form action="/offers/<%=offer.rows[0].id%>?_method=DELETE" method="POST" class="delete-btn">
           <input type="submit" value="DELETE"/>
       </form>
     </div>
