--- a/views/offers/index.html.ejs
+++ b/views/offers/index.html.ejs
@@ -58,7 +58,7 @@
 
 
 
-
+          <a href="/matches">View matches</a>
     <!-- CLOSING OUT DATA-DISPLAY DIV -->
     </div>
 <!-- CLOSING OUT CONTAINER DIV -->
