--- a/views/offers/index.html.ejs
+++ b/views/offers/index.html.ejs
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-
+    <%- include('../partials/head.html.ejs') %>
   </head>
   <body>
+    <!-- NAV -->
+      <%- include('../partials/nav.html.ejs') %>
     <!-- MAIN STATIC STUFF  -->
     <div class="container">
 
@@ -64,10 +66,9 @@
     <a href="/matches">View matches</a>
 <!-- CLOSING OUT CONTAINER DIV -->
     </div>
-
-    <!-- FOOTER -->
+<!-- FOOTER -->
     <footer class="page-footer">
-
+      <%- include('../partials/footer.html.ejs') %>
     </footer>
   </body>
 </html>
