--- a/views/home/index.html.ejs
+++ b/views/home/index.html.ejs
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
-    <title></title>
+    <%- include('../partials/head.html.ejs') %>
   </head>
   <body>
-    <div class="container">
+    <!-- NAV -->
+      <%- include('../partials/nav.html.ejs') %>
+      <!-- MAIN -->
       <div class="data-display">
         <div class="offers-display">
           <h4>OFFERS</h4>
@@ -33,7 +34,7 @@
             </table>
         </div>
         <div class="searches-display">
-          <h4>ENTRIES</h4>
+          <h4>SEARCHES</h4>
           <table class="table table-bordered">
             <thead>
               <tr>
@@ -58,7 +59,10 @@
           </table>
         </div>
       </div>
-    </div>
 
+  <!-- FOOTER -->
+  <footer class="page-footer">
+    <%- include('../partials/footer.html.ejs') %>
+  </footer>
   </body>
 </html>
