--- a/views/offers/show.html.ejs
+++ b/views/offers/show.html.ejs
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
-    <title></title>
+    <%- include('../partials/head.html.ejs') %>
   </head>
   <body>
+    <!-- NAV -->
+      <%- include('../partials/nav.html.ejs') %>
+      <!-- MAIN -->
     Name:<br/>
     <%=offer.rows[0].firstname%>   <%=offer.rows[0].lastname%><br/>
     Age:<br/>
@@ -23,6 +25,9 @@
           <input type="submit" value="DELETE"/>
       </form>
     </div>
-
+    <!-- FOOTER -->
+      <footer class="page-footer">
+        <%- include('../partials/footer.html.ejs') %>
+      </footer>
   </body>
 </html>
