--- a/views/matches/index.html.ejs
+++ b/views/matches/index.html.ejs
@@ -10,11 +10,11 @@
     <table class="table table-bordered">
       <thead>
         <tr>
-        <th scope="col">Name</th>
-        <th scope="col">Name</th>
-        <th scope="col">City</th>
-        <th scope="col">Sport</th>
-        <th scope="col">Activity</th>
+          <th scope="col">NAME</th>
+          <th scope="col">NAME</th>
+          <th scope="col">CITY</th>
+          <th scope="col">SPORT</th>
+          <th scope="col">ACTIVITY</th>
         </tr>
       </thead>
       <tbody>
