--- a/views/offers/index.html.ejs
+++ b/views/offers/index.html.ejs
@@ -9,22 +9,19 @@
     <!-- MAIN STATIC STUFF  -->
     <div class="container">
 
-    <!-- DATA DISPLAY -->
-
-    <div class="data-display">
     <!-- OFFERS -->
 
-      <div class="offers-display">
-        <div class="offers-data">
+      <div class="offers">
+        <div class="offer-data">
           <h4>ENTRIES</h4>
             <table class="table table-bordered">
               <thead>
                 <tr>
-                <th scope="col">Name</th>
-                <th scope="col">Age</th>
-                <th scope="col">City</th>
-                <th scope="col">Sport</th>
-                <th scope="col">Activity</th>
+                  <th scope="col">NAME</th>
+                  <th scope="col">AGE</th>
+                  <th scope="col">CITY</th>
+                  <th scope="col">SPORT</th>
+                  <th scope="col">ACTIVITY</th>
                 </tr>
               </thead>
               <tbody>
@@ -61,8 +58,7 @@
 
 
 
-    <!-- CLOSING OUT DATA-DISPLAY DIV -->
-    </div>
+
     <a href="/matches">View matches</a>
 <!-- CLOSING OUT CONTAINER DIV -->
     </div>
