--- a/views/searches/index.html.ejs
+++ b/views/searches/index.html.ejs
@@ -9,17 +9,17 @@
     <!-- MAIN STATIC STUFF -->
     <div class="container">
       <!-- SEARCHES -->
-      <div class="searches-display">
-        <div class="searches-data">
+      <div class="searches">
+        <div class="search-data">
           <h4>ENTRIES</h4>
           <table class="table table-bordered">
             <thead>
               <tr>
-              <th scope="col">Name</th>
-              <th scope="col">Age</th>
-              <th scope="col">City</th>
-              <th scope="col">Sport</th>
-              <th scope="col">Activity</th>
+                <th scope="col">NAME</th>
+                <th scope="col">AGE</th>
+                <th scope="col">CITY</th>
+                <th scope="col">SPORT</th>
+                <th scope="col">ACTIVITY</th>
               </tr>
             </thead>
             <tbody>
@@ -54,10 +54,10 @@
           </div>
 
 
-          <!-- CLOSING OUT DATA-DISPLAY DIV -->
+
           </div>
           <a href="/matches">View matches</a>
-        <!-- CLOSING OUT CONTAINER DIV -->
+
         </div>
 
         <!-- FOOTER -->
