--- a/views/home/index.html.ejs
+++ b/views/home/index.html.ejs
@@ -7,17 +7,20 @@
     <!-- NAV -->
       <%- include('../partials/nav.html.ejs') %>
       <!-- MAIN -->
+      <h1>FIGHTING FIT MEETUP</h1>
+      <h3>brought to you by the owner of Fighting Fit</h3>
+      <!-- DATA -->
       <div class="data-display">
         <div class="offers-display">
-          <h4>OFFERS</h4>
+          <h5>OFFERS</h5>
             <table class="table table-bordered">
               <thead>
                 <tr>
-                <th scope="col">Name</th>
-                <th scope="col">Age</th>
-                <th scope="col">City</th>
-                <th scope="col">Sport</th>
-                <th scope="col">Activity</th>
+                <th scope="col">NAME</th>
+                <th scope="col">AGE</th>
+                <th scope="col">CITY</th>
+                <th scope="col">SPORT</th>
+                <th scope="col">ACTIVITY</th>
                 </tr>
               </thead>
               <tbody>
@@ -38,11 +41,11 @@
           <table class="table table-bordered">
             <thead>
               <tr>
-              <th scope="col">Name</th>
-              <th scope="col">Age</th>
-              <th scope="col">City</th>
-              <th scope="col">Sport</th>
-              <th scope="col">Activity</th>
+                <th scope="col">NAME</th>
+                <th scope="col">AGE</th>
+                <th scope="col">CITY</th>
+                <th scope="col">SPORT</th>
+                <th scope="col">ACTIVITY</th>
               </tr>
             </thead>
             <tbody>
