--- a/views/home/index.html.ejs
+++ b/views/home/index.html.ejs
@@ -7,8 +7,10 @@
     <!-- NAV -->
       <%- include('../partials/nav.html.ejs') %>
       <!-- MAIN -->
-      <h1>FIGHTING FIT MEETUP</h1>
-      <h3>brought to you by the owner of Fighting Fit</h3>
+      <div class="banner">
+        <h1>Fighting Fit Meetup</h1>
+        <h3>brought to you by the owner of Fighting Fit</h3>
+      </div>
       <!-- DATA -->
       <div class="data-display">
         <div class="offers-display">
