--- a/views/offers/index.html.ejs
+++ b/views/offers/index.html.ejs
@@ -59,7 +59,7 @@
 
 
 
-    <a href="/matches">View matches</a>
+    <button type="button" name="button" class="match-btn"><a href="/matches">View matches</a></button>
 <!-- CLOSING OUT CONTAINER DIV -->
     </div>
 <!-- FOOTER -->
