--- a/views/searches/index.html.ejs
+++ b/views/searches/index.html.ejs
@@ -56,7 +56,7 @@
 
 
           </div>
-          <a href="/matches">View matches</a>
+          <button type="button" name="button" class="match-btn"><a href="/matches">View matches</a></button>
 
         </div>
 
