--- a/views/offers/index.html.ejs
+++ b/views/offers/index.html.ejs
@@ -38,7 +38,13 @@
             </table>
           </div>
 
-          <div class="new-offer-form">
+            <div class="form-container">
+
+            <div class="form-img">
+
+            </div>
+
+          <div class="new-form">
             <h4>I am offering!</h4>
             <form action="/offers" method="POST">
               <div class="form-group">
@@ -52,6 +58,13 @@
               </div>
               </form>
           </div>
+          <!-- CLOSING OUT FORM CONTAINER -->
+          </div>
+
+
+
+
+
             <!-- CLOSING OUT OFFERS-DISPLAY -->
           </div>
 
