--- a/views/home/index.html.ejs
+++ b/views/home/index.html.ejs
@@ -11,10 +11,12 @@
         <h1>Fighting Fit Meetup</h1>
         <h3>brought to you by the owner of Fighting Fit</h3>
       </div>
+      <!-- STATIC STUFF -->
+      
       <!-- DATA -->
       <div class="data-display">
         <div class="offers-display">
-          <h5>OFFERS</h5>
+          <h4>OFFERS</h4>
             <table class="table table-bordered">
               <thead>
                 <tr>
