--- a/views/searches/index.html.ejs
+++ b/views/searches/index.html.ejs
@@ -36,20 +36,26 @@
           </table>
           </div>
 
+          <div class="form-container">
 
-          <div class="new-search-form">
-            <h4>Searching for:</h4>
-            <form action="/searches" method="POST">
-              <div class="form-group">
-                <input type="text" name="fname" placeholder="FIRST NAME" required /><br/>
-                <input type="text" name="lname" placeholder="LAST NAME" required /><br/>
-                <input type="number" name="age" placeholder="AGE"/><br/>
-                <input type="text" name="city" placeholder="CITY" required /><br/>
-                <input type="text" name="sport" placeholder="SPORT" required /><br/>
-                <input type="text" name="activity" placeholder="ACTIVITY" required /><br/>
-                <input type="submit" value="ADD" class="add-btn" />
+            <div class="form-img search-form-img">
+
+            </div>
+
+            <div class="new-form">
+              <h4>Searching for:</h4>
+              <form action="/searches" method="POST">
+                <div class="form-group">
+                  <input type="text" name="fname" placeholder="FIRST NAME" required /><br/>
+                  <input type="text" name="lname" placeholder="LAST NAME" required /><br/>
+                  <input type="number" name="age" placeholder="AGE"/><br/>
+                  <input type="text" name="city" placeholder="CITY" required /><br/>
+                  <input type="text" name="sport" placeholder="SPORT" required /><br/>
+                  <input type="text" name="activity" placeholder="ACTIVITY" required /><br/>
+                  <input type="submit" value="ADD" class="add-btn" />
+                </div>
+                </form>
               </div>
-              </form>
               <!-- CLOSING OUT SEARCHES-DISPLAY -->
           </div>
 
