--- a/views/home/index.html.ejs
+++ b/views/home/index.html.ejs
@@ -12,11 +12,23 @@
         <h3>brought to you by the owner of Fighting Fit</h3>
       </div>
       <!-- STATIC STUFF -->
-      
+      <div class="static-container">
+        <div class="about">
+          <i class="fas fa-link fa-3x"></i>
+          <h4>About FFM</h4>
+          <p>Fighting Fit was established to help you track your workouts and hold you accountable throughout your fitness journey. But workouts are more fun together! FFM connects users to workout with each other.</p>
+        </div>
+        <div class="works">
+          <i class="fas fa-info-circle fa-3x"></i>
+          <h4>How it Works</h4>
+          <p>Are you a training searching for new clients? A student seeking an instructor? Just your average joe looking to rumble? Simply entering your info under offers or searches and find someone in your city whose profile matches up with what you're looking for!</p>
+        </div>
+      </div>
+
       <!-- DATA -->
       <div class="data-display">
         <div class="offers-display">
-          <h4>OFFERS</h4>
+          <h4>Offers</h4>
             <table class="table table-bordered">
               <thead>
                 <tr>
@@ -41,7 +53,7 @@
             </table>
         </div>
         <div class="searches-display">
-          <h4>SEARCHES</h4>
+          <h4>Searches</h4>
           <table class="table table-bordered">
             <thead>
               <tr>
