--- a/views/home/index.html.ejs
+++ b/views/home/index.html.ejs
@@ -21,7 +21,7 @@
         <div class="works">
           <i class="fas fa-info-circle fa-3x"></i>
           <h4>How it Works</h4>
-          <p>Are you a trainer searching for new clients? A student seeking an instructor? Just your average joe looking to rumble? Simply entering your info under offers or searches and find someone in your city whose profile matches up with what you're looking for!</p>
+          <p>Are you a trainer searching for new clients? A student seeking an instructor? Just your average joe looking to rumble? Simply enter your info under offers or searches and find someone in your city whose profile matches up with what you're looking for!</p>
         </div>
       </div>
 
