styling show pages

--- a/views/home/index.html.ejs
+++ b/views/home/index.html.ejs
@@ -13,7 +13,7 @@
       </div>
       <!-- STATIC STUFF -->
       <div class="static-container">
-        <div class="about">
+        <div id="about" class="about">
           <i class="fas fa-link fa-3x"></i>
           <h4>About FFM</h4>
           <p>Fighting Fit was established to help you track your workouts and hold you accountable throughout your fitness journey. But workouts are more fun together! FFM connects users to workout with each other.</p>
