--- a/views/partials/footer.html.ejs
+++ b/views/partials/footer.html.ejs
@@ -1,5 +1,5 @@
 <div class="footer1">
-  <a href="">ABOUT</a><br/>
+  <a href="#about">ABOUT</a><br/>
   <a href="/offers">OFFERS</a><br/>
   <a href="/searches">SEARCHES</a><br/>
   <a href="">CONTACT US</a>
