--- a/public/main.css
+++ b/public/main.css
@@ -85,7 +85,7 @@ footer a {
   width: 48%;
 }
 
-/* OFFERS INDEX */
+/* INDEX PAGES */
 
 .form-container {
   display: flex;
@@ -108,4 +108,26 @@ footer a {
   width: 37%;
   align-self: center;
   padding: 0 1em 0 1em;
+}
+
+/* SHOW PAGES */
+.edit-card {
+  text-align: center;
+  align-self: center;
+  margin: 5em 15em 5em 15em;
+  background-image: url("https://i.ibb.co/hdB4dfp/Fitness-training-with-kettlebell-in-sport-gym-with-sunlight-effect.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  opacity: 80%;
+}
+.action-btns {
+  display: flex;
+  justify-content: space-around;
+}
+
+.edit-btn, .delete-btn {
+  width: 5em;
+  height: 2em;
+  border: 1px solid black;
+  background-color: whitesmoke;
 }
