styling match btn

--- a/views/offers/index.html.ejs
+++ b/views/offers/index.html.ejs
@@ -72,7 +72,7 @@
 
 
 
-    <button type="button" name="button" class="match-btn"><a href="/matches">View matches</a></button>
+    <button type="button" name="button" class="match-btn"><a href="/matches"><i class="fab fa-searchengin fa-2x"> MATCHES</i></a></button>
 <!-- CLOSING OUT CONTAINER DIV -->
     </div>
 <!-- FOOTER -->
