--- a/views/searches/index.html.ejs
+++ b/views/searches/index.html.ejs
@@ -62,7 +62,7 @@
 
 
           </div>
-          <button type="button" name="button" class="match-btn"><a href="/matches">View matches</a></button>
+        <button type="button" name="button" class="match-btn"><a href="/matches"><i class="fab fa-searchengin fa-2x"> MATCHES</i></a></button>
 
         </div>
 
