setting up for user auth

--- a/views/users/login.html.ejs
+++ b/views/users/login.html.ejs
@@ -7,6 +7,17 @@
     <!-- NAV -->
       <%- include('../partials/nav.html.ejs') %>
       <div class="container">
+        <div class="main-form login-form">
+          <h3>Login</h3>
+          <form action="/login" method="POST">
+            <label for="username">Username: </label>
+            <input type="text" id="username" name="username" autofocus><br />
+            <label for="password">Password: </label>
+            <input type="password" id="password" name="password"><br />
+            <input class="submitButton" type="submit" value="LOGIN">
+          </form>
+          <p>Or <a href="/register">register</a> if you do not have an account.</p>
+        </div>
       </div>
       <footer class="page-footer">
           <%- include('../partials/footer.html.ejs') %>
