added imgs and carousel

--- a/views/home/index.html.ejs
+++ b/views/home/index.html.ejs
@@ -25,6 +25,10 @@
         </div>
       </div>
 
+      <!-- SECOND BANNER-->
+      <div class="secondbanner">
+      </div>
+
       <!-- DATA -->
       <div class="data-display">
         <div class="offers-display">
