--- a/public/main.css
+++ b/public/main.css
@@ -85,6 +85,20 @@ footer a {
   width: 48%;
 }
 
+
+.secondbanner {
+  background-image: url("https://i.ibb.co/mHxpbnL/wrappinghands.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  height: 350px;
+  text-align: center;
+  color: white;
+  opacity: 70%;
+  margin-bottom: 1em;
+}
+
+
 /* INDEX PAGES */
 
 .form-container {
@@ -98,8 +112,9 @@ footer a {
 }
 
 .form-img {
-  background: url("https://i.ibb.co/HgSQ07p/IMG-2475.jpg");
+  background: url("https://i.ibb.co/Dbkh3Pm/pads.jpg");
   background-size: cover;
+  background-position: center;
   background-repeat: no-repeat;
   width: 60%;
 }
@@ -130,4 +145,15 @@ footer a {
   height: 2em;
   border: 1px solid black;
   background-color: whitesmoke;
+}
+
+ /* MATCHES */
+ .carousel, .carousel-item > img {
+   max-width: 600px;
+   max-height: 700px;
+   align: center;
+ }
+
+.carousel {
+  margin: auto;
 }
