--- a/views/matches/index.html.ejs
+++ b/views/matches/index.html.ejs
@@ -8,6 +8,38 @@
       <%- include('../partials/nav.html.ejs') %>
       <!-- MAIN -->
     <div class="container">
+      <!-- CAROUSEL -->
+      <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="https://i.ibb.co/JCqKY92/escrima.jpg" alt="escrima" class="d-block w-100">
+          </div>
+          <div class="carousel-item">
+            <img src="https://i.ibb.co/DWpvvhk/sparring.jpg" alt="sparring" class="d-block w-100">
+          </div>
+          <div class="carousel-item">
+            <img src="https://i.ibb.co/mNK30HM/clinch.jpg" alt="clinch" class="d-block w-100">
+          </div>
+          <div class="carousel-item">
+            <img src="https://i.ibb.co/HgSQ07p/IMG-2475.jpg" alt="pads" class="d-block w-100">
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+      <!-- DATA -->
     <table class="table table-bordered">
       <thead>
         <tr>
