--- a/views/offers/index.html.ejs
+++ b/views/offers/index.html.ejs
@@ -13,7 +13,7 @@
 
       <div class="offers">
         <div class="offer-data">
-          <h4>LISTINGS</h4>
+          <h4>OFFER LISTINGS</h4>
             <table class="table table-bordered">
               <thead>
                 <tr>
