--- a/views/partials/nav.html.ejs
+++ b/views/partials/nav.html.ejs
@@ -8,8 +8,8 @@
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
       <li class="nav-item active"><a class="nav-link" href="/home">HOME <span class="sr-only">(current)</span></a></li>
-      <li class="nav-item"><a class="nav-link" href="/offers">OFFER POSTS</a></li>
-      <li class="nav-item"><a class="nav-link" href="/searches">SEARCH POSTS</a></li>
+      <li class="nav-item"><a class="nav-link" href="/offers">OFFERS</a></li>
+      <li class="nav-item"><a class="nav-link" href="/searches">SEARCHES</a></li>
     </div>
   </div>
 </nav>
