--- a/views/searches/index.html.ejs
+++ b/views/searches/index.html.ejs
@@ -11,7 +11,7 @@
       <!-- SEARCHES -->
       <div class="searches">
         <div class="search-data">
-          <h4>LISTINGS</h4>
+          <h4>SEARCH LISTINGS</h4>
           <table class="table table-bordered">
             <thead>
               <tr>
