--- a/public/main.css
+++ b/public/main.css
@@ -87,7 +87,7 @@ footer a {
 
 
 .secondbanner {
-  background-image: url("https://i.ibb.co/mHxpbnL/wrappinghands.jpg");
+  background-image: url("https://i.ibb.co/JCqKY92/escrima.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
