--- a/views/matches/index.html.ejs
+++ b/views/matches/index.html.ejs
@@ -18,16 +18,16 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="https://i.ibb.co/JCqKY92/escrima.jpg" alt="escrima" class="d-block w-100">
+            <img src="https://i.ibb.co/HgSQ07p/IMG-2475.jpg" alt="pads" class="d-block w-100">
           </div>
           <div class="carousel-item">
             <img src="https://i.ibb.co/DWpvvhk/sparring.jpg" alt="sparring" class="d-block w-100">
           </div>
           <div class="carousel-item">
-            <img src="https://i.ibb.co/mNK30HM/clinch.jpg" alt="clinch" class="d-block w-100">
+            <img src="https://i.ibb.co/mHxpbnL/wrappinghands.jpg" alt="wrapping hands" class="d-block w-100">
           </div>
           <div class="carousel-item">
-            <img src="https://i.ibb.co/HgSQ07p/IMG-2475.jpg" alt="pads" class="d-block w-100">
+            <img src="https://i.ibb.co/mNK30HM/clinch.jpg" alt="clinch" class="d-block w-100">
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
