--- a/views/matches/index.html.ejs
+++ b/views/matches/index.html.ejs
@@ -40,8 +40,8 @@
         </a>
       </div>
       <!-- DATA -->
-    <table class="table table-bordered">
-      <thead>
+    <table class="table table-bordered matches-table table-hover">
+      <thead class="thead-dark">
         <tr>
           <th scope="col">NAME</th>
           <th scope="col">NAME</th>
