--- a/views/searches/index.html.ejs
+++ b/views/searches/index.html.ejs
@@ -11,9 +11,9 @@
       <!-- SEARCHES -->
       <div class="searches">
         <div class="search-data">
-          <h4>SEARCH LISTINGS</h4>
-          <table class="table table-bordered">
-            <thead>
+          <h3>Search Listings</h3>
+          <table class="table table-bordered table-hover">
+            <thead class="thead-dark">
               <tr>
                 <th scope="col">NAME</th>
                 <th scope="col">AGE</th>
@@ -52,7 +52,7 @@
                   <input type="text" name="city" placeholder="CITY" required /><br/>
                   <input type="text" name="sport" placeholder="SPORT" required /><br/>
                   <input type="text" name="activity" placeholder="ACTIVITY" required /><br/>
-                  <input type="submit" value="ADD" class="add-btn" />
+                  <input type="submit" value="ADD LISTING" class="add-btn" />
                 </div>
                 </form>
               </div>
@@ -62,7 +62,7 @@
 
 
           </div>
-        <button type="button" name="button" class="match-btn"><a href="/matches"><i class="fab fa-searchengin fa-2x"> MATCHES</i></a></button>
+        <button type="button" name="button" class="match-btn btn-block"><a href="/matches"><i class="fab fa-searchengin fa-2x"> MATCHES</i></a></button>
 
         </div>
 
