--- a/views/offers/index.html.ejs
+++ b/views/offers/index.html.ejs
@@ -13,9 +13,9 @@
 
       <div class="offers">
         <div class="offer-data">
-          <h4>OFFER LISTINGS</h4>
-            <table class="table table-bordered">
-              <thead>
+          <h3>Offer Listings</h3>
+            <table class="table table-bordered table-hover">
+              <thead class="thead-dark">
                 <tr>
                   <th scope="col">NAME</th>
                   <th scope="col">AGE</th>
@@ -54,7 +54,7 @@
                 <input type="text" name="city" placeholder="CITY" required /><br/>
                 <input type="text" name="sport" placeholder="SPORT" required /><br/>
                 <input type="text" name="activity" placeholder="ACTIVITY" required /><br/>
-                <input type="submit" value="ADD" class="add-btn" />
+                <input type="submit" value="ADD LISTING" class="add-btn" />
               </div>
               </form>
           </div>
@@ -72,7 +72,7 @@
 
 
 
-    <button type="button" name="button" class="match-btn"><a href="/matches"><i class="fab fa-searchengin fa-2x"> MATCHES</i></a></button>
+    <button type="button" name="button" class="match-btn btn-block"><a href="/matches"><i class="fab fa-searchengin fa-2x"> MATCHES</i></a></button>
 <!-- CLOSING OUT CONTAINER DIV -->
     </div>
 <!-- FOOTER -->
