--- a/public/main.css
+++ b/public/main.css
@@ -79,6 +79,7 @@ footer a {
   flex-direction: row;
   justify-content: space-around;
   text-align: center;
+  margin: 1em 0 1em 0;
 }
 
 .about, .works {
