--- a/views/home/index.html.ejs
+++ b/views/home/index.html.ejs
@@ -9,7 +9,7 @@
       <!-- MAIN -->
       <div class="banner">
         <h1>Fighting Fit Meetup</h1>
-        <h3>brought to you by the owner of Fighting Fit</h3>
+        <h3>brought to you by the founder of Fighting Fit</h3>
       </div>
       <!-- STATIC STUFF -->
       <div class="static-container">
@@ -32,7 +32,7 @@
       <!-- DATA -->
       <div class="data-display">
         <div class="offers-display">
-          <h4>Offers</h4>
+          <h4>OFFERS</h4><hr/>
             <table class="table table-bordered">
               <thead>
                 <tr>
@@ -57,7 +57,7 @@
             </table>
         </div>
         <div class="searches-display">
-          <h4>Searches</h4>
+          <h4>SEARCHES</h4><hr/>
           <table class="table table-bordered">
             <thead>
               <tr>
