--- a/views/matches/index.html.ejs
+++ b/views/matches/index.html.ejs
@@ -8,6 +8,7 @@
       <%- include('../partials/nav.html.ejs') %>
       <!-- MAIN -->
     <div class="container">
+      <h3 class="matches-header">‎️‍<i class="fab fa-gripfire"></i> It's a Match! ‎️‍<i class="fab fa-gripfire"></i></h3>‎️‍
       <!-- CAROUSEL -->
       <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
@@ -15,6 +16,7 @@
           <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
           <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
           <li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="4"></li>
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -28,6 +30,9 @@
           </div>
           <div class="carousel-item">
             <img src="https://i.ibb.co/mNK30HM/clinch.jpg" alt="clinch" class="d-block w-100">
+          </div>
+          <div class="carousel-item">
+            <img src="https://i.ibb.co/LS8DH2t/groundandpound.jpg" alt="groundandpound" class="d-block w-100">
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
