--- a/views/matches/index.html.ejs
+++ b/views/matches/index.html.ejs
@@ -8,7 +8,7 @@
       <%- include('../partials/nav.html.ejs') %>
       <!-- MAIN -->
     <div class="container">
-      <h3 class="matches-header">‎️‍<i class="fab fa-gripfire"></i> It's a Match! ‎️‍<i class="fab fa-gripfire"></i></h3>‎️‍
+      <h3 class="matches-header">‎️‍<i class="fab fa-gripfire"></i> It's a Match! ‎️‍<i class="fab fa-gripfire"></i></h3>‎️‍<hr/>
       <!-- CAROUSEL -->
       <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
@@ -43,7 +43,7 @@
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="sr-only">Next</span>
         </a>
-      </div>
+      </div><hr/>
       <!-- DATA -->
     <table class="table table-bordered matches-table table-hover">
       <thead class="thead-dark">
